<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/profile_picture_edit_card"
        app:cardCornerRadius="100dp"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:layout_height="200dp">
        <ImageView
            android:id="@+id/profile_picture_edit"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture_edit_card"
        android:layout_centerInParent="true"
        android:layout_marginTop="26dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_et"
        android:layout_centerInParent="true"
        android:layout_marginTop="11dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="TextView"
        android:textSize="18dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_profile_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture_edit_card"
        android:layout_alignEnd="@+id/profile_picture_edit_card"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="-10dp"
        android:clickable="true"
        android:backgroundTint="@color/lightPink"
        android:contentDescription="TODO"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_input_add" />



    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_et"
        android:layout_marginTop="169dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/lightPink"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="Done"
        android:textColor="@color/black"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/remove_profile_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture_edit_card"
        android:layout_alignStart="@+id/profile_picture_edit_card"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="-44dp"
        android:backgroundTint="@color/lightPink"
        android:clickable="true"
        android:contentDescription="TODO"
        android:focusable="true"
        app:srcCompat="@drawable/sharp_remove_black_36" />


</RelativeLayout>
