...
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:layout_below="@+id/profile_picture_card"
        android:layout_alignStart="@+id/profile_picture_card"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="35dp"
...
        android:textSize="40sp"
        android:gravity="center"
        android:background="@color/lightPink"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/edit_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/lightPink"
...
            android:text="Geolocation: "
            />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profile_geolocation_sw"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_geolocation_extra_ll"
        android:layout_width="wrap_content"
...
        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/profile_geolocation_attendee_checkins_btn"
            android:text="@string/check_ins"
            tools:ignore="HardcodedText" />

        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
...
        <Button
            android:textColor="@color/black"
            android:backgroundTint="@color/lightPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:id="@+id/profile_geolocation_organized_events_btn"
            android:text="@string/organized_events"
            />


    </LinearLayout>
</RelativeLayout>
...
